dropshot/tests/fail/bad_server_only2.stderr
error: endpoint `bad_endpoint` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_server_only2.rs:31:32
   |
31 |         _rqctx: RequestContext<()>,
   |                                ^^

error: endpoint `bad_endpoint2` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_server_only2.rs:39:32
   |
39 |         _rqctx: RequestContext<Self::OtherContext>,
   |                                ^^^^^^^^^^^^^^^^^^
